# dspy_agent

./: README.md  info.md  pyproject.toml  run_agent.py
dspy_agent/: __init__.py  cli.py  config.py  memory.py  optimization.py  optimizer.py  pipeline.py  rating.py  schema.py  unified.py
tests/: test_memory.py  test_optimization.py  test_pipeline.py  test_rating.py  test_unified.py
